# finviewer

./: Cargo.toml  ExampleConfig.toml
src/: chart_widget.rs  lib.rs  main.rs  types.rs
